# nbdev_practice

./: README.md  _modidx.py  core.py  pyproject.toml
_proc/: 00_core.ipynb  index.ipynb  nbdev.yml
nbdev_practice/: _modidx.py  core.py
nbdev_practice.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
nbs/: 00_core.ipynb  index.ipynb
nbs/.ipynb_checkpoints/: 00_core-checkpoint.ipynb
